--- a/vuetest/package.json
+++ b/vuetest/package.json
@@ -14,10 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "better-scroll": "^1.8.2",
-    "vue": "^2.5.2",
+    "better-scroll": "^1.8.4",
+    "vue": "^2.5.16",
     "vue-router": "^3.0.1",
-    "vuex": "^3.0.1"
+    "vuex": "^3.0.1",
+    "vux": "^2.8.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
@@ -69,9 +70,9 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
     "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
+    "vue-loader": "^13.7.1",
     "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
+    "vue-template-compiler": "^2.5.16",
     "webpack": "^3.6.0",
     "webpack-bundle-analyzer": "^2.9.0",
     "webpack-dev-server": "^2.9.1",
